WebSite/Content/Styles/Site.css
body {
    padding-top: 50px;
    padding-bottom: 20px;
}

/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 280px;
}

.text-with-image {
    float: left;
    margin: 7px 15px 7px 0;
}

.no-padding {
    padding: 0px !important;
}

.feature-image {
    width: 120px;
    height: 120px;
}

.item-container {
    max-width: 800px;
    overflow-x: scroll;
    overflow-y: hidden;
    white-space: nowrap;
    height: 200px;
}

.image-caption {
    /*display: block;*/
    width: 100%;
}

.item-width {
    width: 300px;
    display: inline;
}
.item-width img {
    width: inherit;
}

.feature-container {
    display: inline-block;
    text-align: center;
}

.feature-text {
    display: block;
}

.feature-row {
    margin-bottom: 25px;
}

.header {
    text-align: center;
}

.horizontal-scroll {
    width: 30em;
    overflow-x: auto;
    white-space: nowrap;
}

.create-item-form img {
    width: 100%;
    height: auto;
    max-height: 500px;
}

.create-item-form .description {
    width: 100%;
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box;
}

.no-margin {
    margin: 0 !important;
}

.create-item-form .create-btn {
    margin-left: 211.97px;
}

.fix-select-margin {
    margin-left: 5px;
}

.input-group-addon {
    width: auto !important;
}

.datepicker {
    min-width: 236.8px;
}

    .btn-file {
        position: relative;
        overflow: hidden;
    }
    .btn-file input[type=file] {
        position: absolute;
        top: 0;
        right: 0;
        min-width: 100%;
        min-height: 100%;
        font-size: 100px;
        text-align: right;
        filter: alpha(opacity=0);
        opacity: 0;
        outline: none;
        background: white;
        cursor: inherit;
        display: block;
    }

